--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "browserify": "^5.12.1",
     "coffee-script": ">= 1.3",
+    "coffeeify": "^0.7.0",
     "gulp": "^3.8.8",
     "gulp-coffee": "^2.2.0",
     "gulp-util": "^3.0.1",
