--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "homepage": "https://github.com/confetti/yayson",
   "devDependencies": {
     "browserify": "^5.12.1",
+    "chai": "^1.9.2",
     "coffee-script": ">= 1.3",
     "coffeeify": "^0.7.0",
     "gulp": "^3.8.8",
@@ -37,5 +38,9 @@
     "gulp-util": "^3.0.1",
     "mocha": "*",
     "vinyl-source-stream": "^1.0.0"
+  },
+  "dependencies": {
+    "lodash": "^2.4.1",
+    "q": "^1.0.1"
   }
 }
