Move q and lodash to optinal deps

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "mocha": "*",
     "vinyl-source-stream": "^1.0.0"
   },
-  "dependencies": {
+  "optionalDependencies": {
     "lodash": "^2.4.1",
     "q": "^1.0.1"
   }
