--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yayson",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "A library for serializing and reading JSON API standardized data in JavaScript.",
   "main": "lib/yayson.js",
   "scripts": {
@@ -33,6 +33,7 @@
     "chai": "^1.9.2",
     "coffee-script": ">= 1.3",
     "coffeeify": "^0.7.0",
+    "ecstatic": "^0.5.5",
     "gulp": "^3.8.8",
     "gulp-coffee": "^2.2.0",
     "gulp-util": "^3.0.1",
