--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yayson",
-  "version": "1.0.5",
+  "version": "2.0.0-beta.1",
   "description": "A library for serializing and reading JSON API standardized data in JavaScript.",
   "main": "lib/yayson.js",
   "scripts": {
