Add underscore to the optional dependencies

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "optionalDependencies": {
     "lodash": "^2.4.1",
-    "q": "^1.0.1"
+    "q": "^1.0.1",
+    "underscore": "^1.8.3"
   }
 }
