Try making deps optional

--- a/package.json
+++ b/package.json
@@ -44,5 +44,10 @@
     "lodash": "^2.4.1",
     "q": "^1.0.1",
     "underscore": "^1.8.3"
+  },
+  "browser": {
+    "lodash": false,
+    "q": false,
+    "underscore": false
   }
 }
