--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "gulp-coffee": "^2.2.0",
     "gulp-util": "^3.0.1",
     "mocha": "*",
+    "sinon": "^2.3.5",
+    "sinon-chai": "^2.11.0",
     "vinyl-source-stream": "^1.0.0"
   },
   "optionalDependencies": {
