Remove coffeescript and fix tests

--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "bower": "^1.7.7",
     "browserify": "^16.2.3",
     "chai": "^4.2.0",
-    "coffeeify": "^3.0.1",
     "ecstatic": "^4.0.0",
     "gulp": "^4.0.0",
     "gulp-coffee": "^3.0.3",
@@ -53,6 +52,6 @@
     "underscore": false
   },
   "dependencies": {
-    "coffeescript": "^2.4.1"
+    "webpack": "^4.41.2"
   }
 }
