--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "yayson",
   "version": "2.0.8",
   "description": "A library for serializing and reading JSON API standardized data in JavaScript.",
-  "main": "lib/yayson.js",
+  "main": "src/yayson.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "build": "webpack",
+    "test-browser": "webpack-dev-server --config webpack.browser.js"
   },
   "repository": {
     "type": "git",
@@ -29,17 +31,17 @@
   },
   "homepage": "https://github.com/confetti/yayson",
   "devDependencies": {
-    "bower": "^1.7.7",
-    "browserify": "^16.2.3",
+    "@babel/core": "^7.7.4",
+    "@babel/preset-env": "^7.7.4",
+    "babel-loader": "^8.0.6",
     "chai": "^4.2.0",
-    "ecstatic": "^4.0.0",
-    "gulp": "^4.0.0",
-    "gulp-coffee": "^3.0.3",
-    "gulp-util": "^3.0.1",
-    "mocha": "*",
-    "sinon": "^7.3.1",
+    "mocha": "^6.2.2",
+    "sinon": "^7.5.0",
     "sinon-chai": "^3.3.0",
-    "vinyl-source-stream": "^2.0.0"
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0"
   },
   "optionalDependencies": {
     "lodash": "^4.17.4",
@@ -51,7 +53,5 @@
     "q": false,
     "underscore": false
   },
-  "dependencies": {
-    "webpack": "^4.41.2"
-  }
+  "dependencies": {}
 }
