--- a/package.json
+++ b/package.json
@@ -37,14 +37,19 @@
     "url": "https://github.com/confetti/yayson/issues"
   },
   "homepage": "https://github.com/confetti/yayson",
+  "browserslist": [
+    "defaults",
+    "not IE 11"
+  ],
   "devDependencies": {
     "@babel/core": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
     "babel-loader": "^8.0.6",
-    "chai": "^4.3.4",
-    "mocha": "^8.3.2",
-    "sinon": "^10.0.0",
-    "sinon-chai": "^3.6.0",
+    "chai": "^4.3.0",
+    "core-js": "^3.21.0",
+    "mocha": "^9.2.0",
+    "sinon": "^13.0.1",
+    "sinon-chai": "^3.7.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
