--- a/package.json
+++ b/package.json
@@ -43,10 +43,13 @@
   ],
   "devDependencies": {
     "@babel/core": "^7.7.4",
+    "@babel/eslint-parser": "^7.17.0",
     "@babel/preset-env": "^7.7.4",
     "babel-loader": "^8.0.6",
     "chai": "^4.3.6",
     "core-js": "^3.21.0",
+    "eslint": "^8.8.0",
+    "eslint-plugin-mocha": "^10.0.3",
     "mocha": "^9.2.0",
     "sinon": "^13.0.1",
     "sinon-chai": "^3.7.0",
