--- a/package.json
+++ b/package.json
@@ -42,21 +42,21 @@
     "not IE 11"
   ],
   "devDependencies": {
-    "@babel/core": "^7.7.4",
-    "@babel/eslint-parser": "^7.17.0",
-    "@babel/preset-env": "^7.7.4",
-    "babel-loader": "^8.0.6",
-    "chai": "^4.3.6",
-    "core-js": "^3.21.0",
-    "eslint": "^8.8.0",
-    "eslint-plugin-mocha": "^10.0.3",
-    "mocha": "^9.2.0",
-    "sinon": "^13.0.1",
+    "@babel/core": "^7.20.12",
+    "@babel/eslint-parser": "^7.19.1",
+    "@babel/preset-env": "^7.20.2",
+    "babel-loader": "^9.1.2",
+    "chai": "^4.3.7",
+    "core-js": "^3.27.2",
+    "eslint": "^8.33.0",
+    "eslint-plugin-mocha": "^10.1.0",
+    "mocha": "^10.2.0",
+    "prettier": "^2.8.3",
+    "sinon": "^15.0.1",
     "sinon-chai": "^3.7.0",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0",
-    "webpack-merge": "^4.2.2"
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1",
+    "webpack-merge": "^5.8.0"
   }
 }
