--- a/package.json
+++ b/package.json
@@ -64,11 +64,11 @@
     "@types/sinon-chai": "^4.0.0",
     "chai": "^4.5.0",
     "concurrently": "^9.2.1",
-    "eslint": "^9.35.0",
+    "eslint": "9.39.1",
     "eslint-plugin-mocha": "^11.1.0",
     "globals": "^16.4.0",
     "mocha": "^11.7.2",
-    "prettier": "^3.6.2",
+    "prettier": "3.7.2",
     "sinon": "^21.0.0",
     "sinon-chai": "^3.7.0",
     "tsx": "^4.20.5",
