--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "sinon-chai": "^3.7.0",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2",
-    "typescript-eslint": "^8.44.0"
+    "typescript-eslint": "^8.44.0",
+    "zod": "4.3.5"
   }
 }
