--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
   },
   "homepage": "https://github.com/confetti/yayson",
   "devDependencies": {
+    "@eslint-community/eslint-plugin-eslint-comments": "4.6.0",
     "@eslint/js": "^9.35.0",
     "@types/mocha": "^10.0.10",
     "@types/node": "^24.5.1",
